--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>1.24.1</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
